# TeaTimer

./: CMakeLists.txt  README.md
source/: Window.cpp  Window.h  main.cpp  window.cpp  window.h
source/gui/: taskbar.cpp  taskbar.h  window.cpp  window.h
source/locker/: lock_session.cpp  lock_session.h
source/window/: window.cpp  window.h
translations/: TeaTimer_de.ts  TeaTimer_en.ts  translations.qrc
